load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bazel",
    srcs = [
        "expr.go",
        "main.go",
    ],
    importpath = "github.com/keddad/sif/bazel",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_bazelbuild_buildtools//edit:go_default_library",
    ],
)

go_test(
    name = "bazel_test",
    srcs = ["expt_test.go"],
    embed = [":bazel"],
)
